Doc swagger feita para cadastros e login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=embrace
+
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
 spring.datasource.username=RM555130
 spring.datasource.password=040506
@@ -7,3 +8,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
