--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,17 @@
 		</dependency>
 
 		<!-- Oracle JDBC Driver -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<version>21.9.0.0</version>
+		</dependency> -->
+		<dependency>
+		<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>12.2.0.jre17</version>
 		</dependency>
+
 
 		<!-- Hibernate Dialects -->
 		<dependency>
