--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 spring.application.name=embrace
 
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
-spring.datasource.username=RM555130
-spring.datasource.password=040506
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# Conexão SQL Server Azure
+spring.datasource.url=jdbc:sqlserver://db-server-rm555497.database.windows.net:1433;database=db-users;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=cp4-fiap@db-server-rm555497
+spring.datasource.password=SEU_PASSWORD_AQUI
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Swagger / OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+# Porta da aplicação
+server.port=8080
